Fixed weird student dashboard spacing, added error-handling for teacher in leaderboard

--- a/app/src/static/css/dashboard.css
+++ b/app/src/static/css/dashboard.css
@@ -202,7 +202,7 @@ progress::-webkit-progress-value {
 
 .card-body1 {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     padding-left: 25px;
     padding-right: 25px;
